feat: updated README change config dir.